# OPENMP-learing

./: .gitignore  README.md
helloworld/Ye_MPItest/: CMakeLists.txt  main.cpp
